--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,7 @@
 /* format css  */
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  box-sizing: border-box;
-}
+*{padding: 0;margin: 0;box-sizing:content-box;}
 ul{list-style: none;}
-
-a{text-decoration: none;}
+a{text-decoration: none;color: rgba(103, 36, 155, 0.67);}
 
 #app{
   width: 100%;
